# automated-order-processing

./: .env.template  .gitignore  README.md  pyproject.toml
src/: data_processing.py  extraction_prompt.jinja  langfuse_integration.py  task.py
